--- a/DemoMvc/Web.config
+++ b/DemoMvc/Web.config
@@ -35,6 +35,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"/>
+    <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm"/>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
